crates/rome_js_formatter/tests/specs/prettier/js/destructuring-private-fields/valid-multiple-bindings.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\destructuring-private-fields\\valid-multiple-bindings.js"
---

# Input

```js
class C {
  #x = 1;
  m() {
    const {#x: x1, #x: x2 = x1 } = this;
  }
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,6 +1,6 @@
 class C {
   #x = 1;
   m() {
-    const { #x: x1, #x: x2 = x1 } = this;
+    const {#x: x1, #x: x2 = x1 } = this;
   }
 }
```

# Output

```js
class C {
  #x = 1;
  m() {
    const {#x: x1, #x: x2 = x1 } = this;
  }
}
```


# Errors
```
valid-multiple-bindings.js:4:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier, a member name, or a rest pattern but instead found '#x: x1'
  
  × Expected an identifier, a member name, or a rest pattern here
  
    ┌─ valid-multiple-bindings.js:4:12
    │
  4 │     const {#x: x1, #x: x2 = x1 } = this;
    │            ^^^^^^
  
valid-multiple-bindings.js:4:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier, a member name, or a rest pattern but instead found '#x: x2'
  
  × Expected an identifier, a member name, or a rest pattern here
  
    ┌─ valid-multiple-bindings.js:4:20
    │
  4 │     const {#x: x1, #x: x2 = x1 } = this;
    │                    ^^^^^^
  
valid-multiple-bindings.js:4:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `=`
  
  × unexpected
  
    ┌─ valid-multiple-bindings.js:4:27
    │
  4 │     const {#x: x1, #x: x2 = x1 } = this;
    │                           ^
  

```


